--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+		
+		<!-- Favicon and App Icons -->
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-192.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-192.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="manifest" href="/manifest.json">
+		
+		<!-- Theme colors for mobile browsers -->
+		<meta name="theme-color" content="#000000">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="default">
+		<meta name="apple-mobile-web-app-title" content="Cercino">
+		
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
